# m3api

./: .gitignore  README.org  pyproject.toml
m3api/: __init__.py  m3api.py  m3cli.py
tests/: test_m3api.py
