[tool.poetry]
name = "m3api"
version = "0.1.0"
description = "Package to work with M3 API's"
authors = ["Kim Timothy Engh <{ID}+{username}@users.noreply.github.com>"]
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.26.0"
requests = "^2.30.0"
keyring = "^23.0.0"
zeep = "^4.2.1"
typer = { version = "^0.9.0", optional = true }
click = { version = "^8.1.7", optional = true }
rich = { version = "^13.7.0", optional = true }


[tool.poetry.extras]
cli = ["typer", "rich"]

[tool.poetry.scripts]
m3api = {reference = "m3api.m3cli:app", extras = ["cli"], type = "console" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
